[gd_scene load_steps=2 format=3 uid="uid://w3btsd3cquti"]

[ext_resource type="Script" uid="uid://bigue0pqvltrq" path="res://scenes/post_process.gd" id="1_excwc"]

[node name="PostProcess" type="CanvasLayer"]
script = ExtResource("1_excwc")

[node name="Texture" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[connection signal="properties_changed" from="." to="." method="_on_properties_changed"]
